--- a/_config.yml
+++ b/_config.yml
@@ -9,12 +9,12 @@
 locale                   : "en-US"
 title                    : "Shaozhe Liu's Personal Homepage"
 title_separator          : "-"
-name                     : &name "Your Name"
+name                     : &name "Shaozhe Liu"
 description              : &description "personal description"
 url                      : https://shaozheliu.github.io # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
 baseurl                  : "" # the subpath of your site, e.g. "/blog"
 repository               : "academicpages/academicpages.github.io"
-teaser                   :  # filename of teaser fallback teaser image placed in /images/, .e.g. "500x300.png"
+teaser                   : 'lsz.jpg'  # filename of teaser fallback teaser image placed in /images/, .e.g. "500x300.png"
 breadcrumbs              : false # true, false (default)
 words_per_minute         : 160
 future                   : true
